@@ -84,7 +84,7 @@
         </li>
         <li><b>testReadWriteCached</b><br/>
            load objects with access mode 'ReadWrite' by standard OQL query, cache 
-           contains all objects that are queried, loaded or accessed duringt the test.
+           contains all objects that are queried, loaded or accessed during the test.
         </li>
         <li><b>testReadWriteOidEmpty</b><br/>
            load objects with access mode 'ReadWrite' by OID loading strategy, cache 
@@ -92,7 +92,7 @@
         </li>
         <li><b>testReadWriteOidCached</b><br/>
            load objects with access mode 'ReadWrite' by OID loading strategy, cache 
-           contains all objects that are queried, loaded or accessed duringt the test.
+           contains all objects that are queried, loaded or accessed during the test.
         </li>
         <li><b>testReadOnlyEmpty</b><br/>
            load objects with access mode 'ReadOnly' by standard OQL query, cache is 
@@ -100,7 +100,7 @@
         </li>
         <li><b>testReadOnlyCached</b><br/>
            load objects with access mode 'ReadOnly' by standard OQL query, cache 
-           contains all objects that are queried, loaded or accessed duringt the test.
+           contains all objects that are queried, loaded or accessed during the test.
         </li>
         <li><b>testReadOnlyOidEmpty</b><br/>
            load objects with access mode 'ReadOnly' by OID loading strategy, cache 
@@ -108,7 +108,7 @@
         </li>
         <li><b>testReadOnlyOidCached</b><br/>
            load objects with access mode 'ReadOnly' by OID loading strategy, cache 
-           contains all objects that are queried, loaded or accessed duringt the test.
+           contains all objects that are queried, loaded or accessed during the test.
         </li>
         <li><b>testReadOnlyOidOnly</b><br/>
            only execute the query to load OID but do not access any object.
