@@ -1,6 +1,11 @@
 SVN
 -------------------------------
 
+JDO:   Resolved issue CASTOR-1870 using contribution from Ralf Joachim [Ralf.joachim@syscon-world.de]
+       Moved Performance Test Framework of Castor Persistence to its own module.
+       Details: http://jira.codehaus.org/browse/CASTOR-1870
+       (Ralf - 20070217)
+
 XML:   Resolved issue CASTOR-1866 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
        Added property to Castor's Ant task to allow configuration of 'nameConflictStrategy'.
        Details: http://jira.codehaus.org/browse/CASTOR-1866
